ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: roboshop.devopsb62.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-for-grafana
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.devopsb62.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-grafana
          servicePort: 80
